[gd_scene load_steps=5 format=2]

[ext_resource path="res://items/Axe.gd" type="Script" id=1]
[ext_resource path="res://items/AxeMesh.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/sfx/axe-break.wav" type="AudioStream" id=3]

[sub_resource type="CylinderShape" id=1]
radius = 3.0142
height = 1.0

[node name="Axe" type="Spatial"]
script = ExtResource( 1 )

[node name="Area" type="Area" parent="."]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -8.74228e-08, 2, 3 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.085989 )
shape = SubResource( 1 )
disabled = true

[node name="Cooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HitTime" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="AxeMesh" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, 0, 0 )

[node name="BreakAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="HitTime" to="." method="_on_HitTime_timeout"]
